# pickleball_scheduler

./: .gitignore  How-To.md  Install-Windows.bat  README.md  install.ps1  pyproject.toml  requirements.txt
config/: nicknames.json  player_overrides.json
src/: __init__.py  auth.py  config.py  dupr_client.py  game_types.py  html_generator.py  input_parser.py  interactive_confirm.py  main.py  nickname_resolver.py  player_registry.py  player_search.py  updater.py
tests/: __init__.py  test_config.py  test_dupr_client.py  test_game_types.py  test_html_generator.py  test_html_playwright.py  test_input_parser.py  test_player_search.py  test_search_debug.py
